gitops/victoria-metrics-k8s-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: victoriametrics
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-grafana
  hostnames:
  - grafana.sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: victoria-metrics-k8s-stack-grafana
      port: 80
